--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -1,41 +1,44 @@
 {
-  "locale": "en",
-  "translations": {
-    "1519954996184640001": "Error",
-    "2112337235463506698": "Unknown error occurred. Please report this to the control desk!",
-    "7766970022605922537": "Payment {$PH}",
-    "4948663886508626048": "Created On",
-    "4902817035128594900": "Description",
-    "6533918067030990396": "Amount",
-    "3973931101896534797": "Date",
-    "6577363470280891281": "Fee Amount",
-    "1862168042835534841": "Fee Paid",
-    "991066160113599649": "Remaining",
-    "7447870521853278062": "Bursar's Signature",
-    "5866254605255506989": "English",
-    "7633754075223722162": "French",
-    "8398799011752101148": "Student data from the online system has been loaded. Please select the academic and click the button below to reload.",
-    "8875914370901148935": "Student data was last loaded on: {$INTERPOLATION}",
-    "8953033926734869941": "Name",
-    "8976423499702668416": "Reg. No",
-    "4021059841853593852": "Class Level",
-    "2593007815199532062": "Section",
-    "9216117865911519658": "Action",
-    "2509141182388535183": "View",
-    "3768927257183755959": "Save",
-    "7049887240439736400": "Print",
-    "7573587174425653399": "Add {$INTERPOLATION} student entries",
-    "2500165888884418617": "Student Details",
-    "8818537673244594815": "Tuition Details",
-    "2118126134797302227": "Tuition amount",
-    "1431155231423312537": "Total Paid",
-    "5952832494418046858": "Total Owed",
-    "2280407226171719947": "Fee amount for this class: {$PH}",
-    "7841438097666236755": "Academic Year",
-    "5012084291992448490": "Fees",
-    "2668864227584228682": "Welcome Back",
-    "1462375679514506013": "Username / Email",
-    "1431416938026210429": "Password",
-    "840692109692540367": "Sign In"
-  }
+    "locale": "en",
+    "translations": {
+        "1519954996184640001": "Error",
+        "2112337235463506698": "Unknown error occurred. Please report this to the control desk!",
+        "7766970022605922537": "Payment {$PH}",
+        "4948663886508626048": "Created On",
+        "4902817035128594900": "Description",
+        "6533918067030990396": "Amount",
+        "3973931101896534797": "Date",
+        "6577363470280891281": "Fee Amount",
+        "1862168042835534841": "Fee Paid",
+        "991066160113599649": "Remaining",
+        "7447870521853278062": "Bursar's Signature",
+        "5866254605255506989": "English",
+        "7633754075223722162": "French",
+        "8398799011752101148": "Student data from the online system has been loaded. Please select the academic and click the button below to reload.",
+        "5394695295212450065": "Select Academic Year",
+        "6080697978229878333": "Load Student Data",
+        "8875914370901148935": "Student data was last loaded on: {$INTERPOLATION}",
+        "8953033926734869941": "Name",
+        "8976423499702668416": "Reg. No",
+        "4021059841853593852": "Class Level",
+        "2593007815199532062": "Section",
+        "9216117865911519658": "Action",
+        "2509141182388535183": "View",
+        "3768927257183755959": "Save",
+        "7049887240439736400": "Print",
+        "7573587174425653399": "Add {$INTERPOLATION} student entries",
+        "7787014569189147478": "Export to excel",
+        "2500165888884418617": "Student Details",
+        "8818537673244594815": "Tuition Details",
+        "2118126134797302227": "Tuition amount",
+        "1431155231423312537": "Total Paid",
+        "5952832494418046858": "Total Owed",
+        "2280407226171719947": "Fee amount for this class: {$PH}",
+        "7841438097666236755": "Academic Year",
+        "5012084291992448490": "Fees",
+        "2668864227584228682": "Welcome Back",
+        "1462375679514506013": "Username / Email",
+        "1431416938026210429": "Password",
+        "840692109692540367": "Sign In"
+    }
 }
