--- a/src/assets/i18n/fr.json
+++ b/src/assets/i18n/fr.json
@@ -1,41 +1,44 @@
 {
-  "locale": "fr",
-  "translations": {
-    "1519954996184640001": "Erreur",
-    "2112337235463506698": "Une erreur inconnue s'est produite. Veuillez le signaler au bureau de contr\u00f4le\u00a0!",
-    "7766970022605922537": "Paiement {$PH}",
-    "4948663886508626048": "Cr\u00e9\u00e9 sur",
-    "4902817035128594900": "Description",
-    "6533918067030990396": "Montant",
-    "3973931101896534797": "Date",
-    "6577363470280891281": "Montant des frais",
-    "1862168042835534841": "Frais pay\u00e9s",
-    "991066160113599649": "Restant",
-    "7447870521853278062": "Signature de l'\u00e9conome",
-    "5866254605255506989": "Anglais",
-    "7633754075223722162": "Fran\u00e7ais",
-    "8398799011752101148": "Les donn\u00e9es des \u00e9tudiants du syst\u00e8me en ligne ont \u00e9t\u00e9 charg\u00e9es. Veuillez s\u00e9lectionner l'universitaire et cliquez sur le bouton ci-dessous pour recharger.",
-    "8875914370901148935": "Les donn\u00e9es des \u00e9tudiants ont \u00e9t\u00e9 charg\u00e9es pour la derni\u00e8re fois\u00a0: {$INTERPOLATION}",
-    "8953033926734869941": "Nom",
-    "8976423499702668416": "R\u00e9g. Non",
-    "4021059841853593852": "Niveau de classe",
-    "2593007815199532062": "Section",
-    "9216117865911519658": "Action",
-    "2509141182388535183": "Voir",
-    "3768927257183755959": "Sauvegarder",
-    "7049887240439736400": "Imprimer",
-    "7573587174425653399": "Ajouter {$INTERPOLATION} entr\u00e9es d'\u00e9tudiants",
-    "2500165888884418617": "D\u00e9tails de l'\u00e9tudiant",
-    "8818537673244594815": "D\u00e9tails des frais de scolarit\u00e9",
-    "2118126134797302227": "Montant des frais de scolarit\u00e9",
-    "1431155231423312537": "Total pay\u00e9",
-    "5952832494418046858": "Total d\u00fb",
-    "2280407226171719947": "Montant des frais pour ce cours\u00a0: {$PH}",
-    "7841438097666236755": "Ann\u00e9e acad\u00e9mique",
-    "5012084291992448490": "Frais",
-    "2668864227584228682": "Content de te revoir",
-    "1462375679514506013": "Nom d'utilisateur / E-mail",
-    "1431416938026210429": "Mot de passe",
-    "840692109692540367": "Se connecter"
-  }
+    "locale": "fr",
+    "translations": {
+        "1519954996184640001": "Erreur",
+        "2112337235463506698": "Une erreur inconnue s'est produite. Veuillez le signaler au bureau de contr\u00f4le\u00a0!",
+        "7766970022605922537": "Paiement {$PH}",
+        "4948663886508626048": "Cr\u00e9\u00e9 sur",
+        "4902817035128594900": "Description",
+        "6533918067030990396": "Montant",
+        "3973931101896534797": "Date",
+        "6577363470280891281": "Montant des frais",
+        "1862168042835534841": "Frais pay\u00e9s",
+        "991066160113599649": "Restant",
+        "7447870521853278062": "Signature de l'\u00e9conome",
+        "5866254605255506989": "Anglais",
+        "7633754075223722162": "Fran\u00e7ais",
+        "8398799011752101148": "Les donn\u00e9es des \u00e9tudiants du syst\u00e8me en ligne ont \u00e9t\u00e9 charg\u00e9es. Veuillez s\u00e9lectionner l'universitaire et cliquez sur le bouton ci-dessous pour recharger.",
+        "5394695295212450065": "S\u00e9lectionnez l'ann\u00e9e acad\u00e9mique",
+        "6080697978229878333": "Charger les donn\u00e9es des \u00e9tudiants",
+        "8875914370901148935": "Les donn\u00e9es des \u00e9tudiants ont \u00e9t\u00e9 charg\u00e9es pour la derni\u00e8re fois\u00a0: {$INTERPOLATION}",
+        "8953033926734869941": "Nom",
+        "8976423499702668416": "R\u00e9g. Non",
+        "4021059841853593852": "Niveau de classe",
+        "2593007815199532062": "Section",
+        "9216117865911519658": "Action",
+        "2509141182388535183": "Voir",
+        "3768927257183755959": "Sauvegarder",
+        "7049887240439736400": "Imprimer",
+        "7573587174425653399": "Ajouter {$INTERPOLATION} entr\u00e9es d'\u00e9tudiants",
+        "7787014569189147478": "Exporter vers Excel",
+        "2500165888884418617": "D\u00e9tails de l'\u00e9tudiant",
+        "8818537673244594815": "D\u00e9tails des frais de scolarit\u00e9",
+        "2118126134797302227": "Montant des frais de scolarit\u00e9",
+        "1431155231423312537": "Total pay\u00e9",
+        "5952832494418046858": "Total d\u00fb",
+        "2280407226171719947": "Montant des frais pour ce cours\u00a0: {$PH}",
+        "7841438097666236755": "Ann\u00e9e acad\u00e9mique",
+        "5012084291992448490": "Frais",
+        "2668864227584228682": "Content de te revoir",
+        "1462375679514506013": "Nom d'utilisateur / E-mail",
+        "1431416938026210429": "Mot de passe",
+        "840692109692540367": "Se connecter"
+    }
 }
