--- a/src/assets/i18n/root.json
+++ b/src/assets/i18n/root.json
@@ -15,6 +15,8 @@
     "5866254605255506989": "English",
     "7633754075223722162": "French",
     "8398799011752101148": " Student data from the online system has been loaded. Please select the academic and click the button below to reload. ",
+    "5394695295212450065": "Select Academic Year",
+    "6080697978229878333": "Load Student Data",
     "8875914370901148935": "Student data was last loaded on: {$INTERPOLATION}",
     "8953033926734869941": "Name",
     "8976423499702668416": "Reg. No",
@@ -25,6 +27,7 @@
     "3768927257183755959": "Save",
     "7049887240439736400": "Print",
     "7573587174425653399": "Add {$INTERPOLATION} student entries",
+    "7787014569189147478": "Export to excel",
     "2500165888884418617": "Student Details",
     "8818537673244594815": "Tuition Details",
     "2118126134797302227": "Tuition amount",
